--- a/test4/public/Consultation/CONSULTATION.css
+++ b/test4/public/Consultation/CONSULTATION.css
@@ -13,6 +13,25 @@ body{
     overflow-x: hidden;
 
 }
+.filter{
+  border:1px solid #333;
+  font-size: 10px;
+  padding: 12px 10px;
+  width:15%;
+  position: absolute;
+  right:-80px;
+  top:-20px;
+}
+.input-filter ion-icon{
+  position:absolute;
+  font-size: 22px;
+  color: black;
+  border:1px solid #333;
+  padding: 5px;
+  right:120px;
+  top:-18px;
+  font-weight: bolder;
+}
 
 section{
     padding: 5rem 0;
