--- a/test4/public/Pharmacy/Pharmacy.css
+++ b/test4/public/Pharmacy/Pharmacy.css
@@ -1,4 +1,5 @@
 
+
 *{
     margin:0;
     padding:0;
@@ -18,6 +19,58 @@ body{
   position:relative;
   top:105px;
 }
+.cart{
+    position:absolute;
+    z-index: 1;
+    right:-100px;
+    top:-30px;
+    list-style: none;
+    display:inline-block;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+.cart span{
+    padding-left: 5px;
+    color:cornsilk;
+}
+.cart a{
+  font-size: 12px;
+    padding:13px;
+    background-color:black;
+    color:cornsilk;
+    text-decoration: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+.cart ion-icon{
+    vertical-align: bottom;
+    font-size:20px;
+    padding-right:5px;
+    color:cornsilk;
+    position: relative;
+    bottom:-2px;
+}
+
+.filter{
+  border:1px solid #333;
+  font-size: 10px;
+  padding: 12px 10px;
+  width:15%;
+  position: absolute;
+  right:0px;
+  top:-35px;
+}
+.input-filter ion-icon{
+  position:absolute;
+  font-size: 22px;
+  color: black;
+  border:1px solid #333;
+  padding: 5px;
+  right:200px;
+  top:-33px;
+  font-weight: bolder;
+}
+
 section{
     padding: 5rem 0;
     background-color: white;
@@ -214,6 +267,8 @@ input #number {
 .numberbox{
   width:100px;
   height:30px;
+  position:relative;
+  top:-15px;
 
 }
 .num{
@@ -225,10 +280,10 @@ input #number {
   top:-20px;
 }
 
-  .open-button {
+  .add-cart {
     text-decoration: none;
     text-transform: uppercase;
-    padding: 12px 36px;
+    padding: 10px 26px;
     margin: 10px 0;
     font-size: 18px;
     letter-spacing: 2px;
@@ -236,7 +291,8 @@ input #number {
     border-radius: 40px;
     background: black;
     position:relative;
-    left:20px;
+    left:35px;
+    bottom:20px;
   }
   @media screen and (min-width: 700px){
       .card-wrapper{
@@ -438,3 +494,134 @@ input #number {
       margin: 5px 0;
     }
   }
+
+  /*-------------CART PAGE-------------*/
+
+  .heading ion-icon{
+    position: relative;
+    bottom:-8px;
+    color:#333;
+  }
+  .products-container{
+    max-width: 90%;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 100px;
+    background-color: #B0E0E6;
+    border-radius: 10px;
+  }
+  .products-container ion-icon{
+    font-size: 25px;
+    color: blue;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  .product-header{
+    width: 100%;
+    max-width: 95%;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 4px solid;
+    margin: 0 auto;
+    border-color: #00008B;
+  }
+  .product-title{
+    width: 45%;
+    font-size: 20px;
+    color: black;
+  }
+  .price{
+    border-bottom: 1px solid;
+    font-size: 20px;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    color: black;
+  }
+  .total{
+    font-size: 20px;
+    width: 25%;
+    border-bottom: 1px solid;
+    display: flex;
+    padding-left: 75px;
+    align-items: center;
+    color: black;
+  }
+  .product{
+    width: 45%;
+    object-fit: cover;
+    border-bottom: 1px solid;
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+    justify-content: space-around;
+    color: black;
+  }
+  .quantity{
+    font-size: 20px;
+    width: 15%;
+    border-bottom: 1px solid;
+    position: relative;
+    right:-30px;
+    display: flex;
+    padding:5px 0;
+    align-items: center;
+    color: black;
+  }
+  .product ion-icon{
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    color: black;
+  }
+  .products{
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .products img{
+    width:75px;
+    align-items: center;
+
+  }
+  .basketTotalContainer{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding:10px 0;
+
+  }
+
+  .basketTotalTitle{
+    width:30%;
+    color: black;
+    font-size: 18px;
+    position: relative;
+    left: 30px;
+  }
+  
+  .basketTotal{
+    width:10%;
+    position: relative;
+    left:-119px;
+    color: black;
+    font-size: 18px;
+  }
+  .containeraddress {
+    margin-top: 20px;
+  }
+  
+.continueto a{
+  background-color: black;
+  font-size: 18px;
+  position:absolute;
+  width:50%;
+  padding:11px;
+  color:cornsilk;
+  cursor: pointer;
+  text-decoration: none;
+  text-align:center;
+  margin-top: 10px;
+  margin-left: 25%;
+}
