--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -101,12 +101,14 @@
 		</div>
 		<div>
 			<center>
-				<table class="tab">
-					<tr><td> Patient's Name </td><td><%= name %></td></tr>
-					<tr><td>Email </td><td><%= email %></td></tr>
-                    <tr><td>Phone Number </td><td><%= phone %></td></tr>
-                    <tr><td>Doctor's Name </td><td><%= doctor %></td></tr>
-				</table>
+				<% patients.forEach(function(patient) { %>
+					<table class="tab">
+						<tr><td> Patient's Name </td><td><%= patient.name %></td></tr>
+						<tr><td>Email </td><td><%= patient.email %></td></tr>
+						<tr><td>Phone Number </td><td><%= patient.phone %></td></tr>
+						<tr><td>Doctor's Name </td><td><%= patient.doctor %></td></tr>
+					</table>
+				<% }); %>	
 			</center>
 		</div>
 		<div class="abc">
